--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,11 +34,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SplashActivity"
-            android:exported="true" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="false"/>
     </application>
 
 </manifest>
